# otel-instrumentations

./: .env  .gitignore  README.md  compose.yml  traffic.sh
src/data-processing/: Cargo.toml  Dockerfile
src/data-processing/src/: data_processing.rs  main.rs  telemetry_conf.rs
src/otelcollector/: otelcol-config.yml
src/temperature-calculator/: Dockerfile  build.gradle.kts
src/temperature-calculator/src/main/java/io/temp/calculator/: CalculatorController.java  Thermometer.java
src/temperature-simulator/: Dockerfile  build.gradle.kts
src/temperature-simulator/src/main/java/io/temp/simulator/: TemperatureApplication.java  TemperatureController.java  Thermometer.java
src/temperature-simulator/src/main/resources/: logback.xml
