[package]
name = "dataprocessing"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "dataprocessing"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
awc = { version = "3.5.1", default-features = false, features = ["compress-zstd"] }
log = { version = "0.4.25", features = ["kv"] }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

# OpenTelemetry dependencies
actix-web-opentelemetry = { version = "0.20.1", features = ["sync-middleware", "awc"] }
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"]}
opentelemetry-otlp = { version = "0.27.0", features = ["tokio", "trace", "metrics", "logs"] }
opentelemetry-appender-log = "0.27.0"
opentelemetry-resource-detectors = "0.6.0"
